--- a/templates/index.html
+++ b/templates/index.html
@@ -39,10 +39,10 @@
     <h1>Embed an Image into Your QR Code</h1>
     <form method="POST" enctype="multipart/form-data">
         <label>QR Code Image (PNG/JPG):</label>
-        <input type="file" name="qr_image" accept="image/*" required><br><br>
+        <input type="file" name="qr" accept="image/*" required><br><br>
 
         <label>Image to Embed (PNG with transparent background recommended):</label>
-        <input type="file" name="embed_image" accept="image/*" required><br><br>
+        <input type="file" name="embed" accept="image/*" required><br><br>
 
         <label>Random Seed (optional):</label>
         <input type="text" name="seed"><br><br>
