--- a/templates/index.html
+++ b/templates/index.html
@@ -93,12 +93,19 @@
     <button type="submit">Generate</button>
   </form>
 
-   {% if output_image %}
+<!--    {% if output_image %}
       <h2>Generated QR with Embedded Image:</h2>
       <img src="{{ url_for('static', filename=output_image) }}" alt="Embedded QR" style="max-width: 300px; border: 2px solid #cc0066; margin-top: 20px;">
       <br>
       <a href="{{ url_for('static', filename=output_image) }}" download class="download-btn" style="display: inline-block; margin-top: 10px; padding: 10px 20px; background-color: #cc0066; color: white; text-decoration: none; border-radius: 6px;">Download</a>
-    {% endif %}
+    {% endif %} -->
+
+  {% if image_url %}
+    <div class="result-image">
+        <img src="{{ image_url }}" alt="Processed Image">
+        <a href="{{ image_url }}" download>Download Image</a>
+    </div>
+  {% endif %}
     
   <script>
     function previewImage(input, previewId) {
